kubernetes/nitter/service.yml
kind: Service
apiVersion: v1
metadata:
  name:  nitter-svc
spec:
  selector:
    app:  nitter
  type:  ClusterIP
  ports:
    - protocol: TCP
      port:  8080
      targetPort:  8080
