kubernetes/nitter/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter-ing
  namespace: nitter
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: <hostname>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nitter-svc
            port:
              number: 8080
  tls:
  - hosts:
    - <hostname>
      #    secretName: argocd-secret # do not change, this is provided by Argo CD
